# cortab

./: .gitignore  README.md  pyproject.toml
cortab/: click_custom.py  clsns.py  convert.py  corpusTable.csv  corpusTable_prep.xlsx  cortab.py  cortacl.py  dfconvert-cli.py  dfconvert.py  disco_test.ttl  example_output.ttl  example_output_1_28.ttl  full_test.ttl  output.ttl  row_rule.py  row_rules.py  rules.py  table_partitions.py  test.ttl  transformation.py
cortab/example_output/: __old_corpustable.ttl  additional_link_table.ttl  corpustable.ttl  disco.ttl
cortab/helpers/: cortab_utils.py  lang_utils.py
cortab/output/: corpustable.ttl
cortab/output/old/: corpustable.ttl
cortab/sheets/: additionalLinks.csv  corporaList.csv  corpusTable_prep.xlsx  sheet_converter.py
cortab/vocabs/: appellation.ttl  appellation_type.ttl  corpus.ttl  corpus_type.ttl  feature.ttl  format.ttl  identifier.ttl  licenses.ttl  link.ttl  link_type.ttl  literary_genre.ttl  method.ttl  publication.ttl
cortab/vocabs/appellationType/: appellationType_cidoc.ttl  appellationType_skos.ttl
cortab/vocabs/corpusType/: corpusType_cidoc.ttl  corpusType_skos.ttl
cortab/vocabs/deprecated/: clscor_vocabs_rdf.ttl  clscor_vocabs_skos.ttl
cortab/vocabs/dimensionType/: dimensionType.ttl
cortab/vocabs/evaluationType/: evalType_skos.ttl
cortab/vocabs/features/: features_cidoc.ttl
cortab/vocabs/formats/: formats_crmcls.ttl
cortab/vocabs/licenses/: licenses_skos.ttl
cortab/vocabs/linkType/: linkType_cidoc.ttl  linkType_skos.ttl
cortab/vocabs/literaryGenre/: literaryGenre_cidoc.ttl  (+1 more)
(+1 files in other folders)
