[tool.poetry]
name = "cortab"
version = "0.1.0"
description = ""
authors = ["Lukas Plank <lupl@tuta.io>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.0.2"
rdfdf = "^0.1.3"
shortuuid = "^1.0.11"
langcodes = "^3.3.0"
click = "^8.1.3"
lodkit = "^0.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
