[tool.poetry]
name = "cortab"
version = "0.1.0"
description = ""
authors = ["Lukas Plank <lupl@tuta.io>"]
readme = "README.md"

[tool.poetry.scripts]
cortacl = "cortab.cortacl:cortacl"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.0.2"
shortuuid = "^1.0.11"
langcodes = {extras = ["data"], version = "^3.3.0"}
click = "^8.1.3"
clisn = "^0.1.2"
lodkit = "^0.1.1"
toolz = "^0.12.0"
tabulardf = "^0.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
